# ICCR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
example/: config.ini
iccr/: __init__.py  iccr.py
tests/: sim_irapa_001.hdf5  test.py
